<resources>
    <string name="app_name">Guidance</string>
    <string name="contact">KempCP@cardiff.ac.uk</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="notification_ambient_temp">Waiting For Ambient Temperature Change</string>
    <string name="notification_steps">Step Counter</string>
    <string name="notification_daily_question">Please Answer Daily Questions</string>
    <string name="notification_location">Storing Location</string>
    <string name="notification_weather">Storing Weather</string>
    <string name="notification_questionnaire">Please Answer Questionnaire</string>
    <string name="study_status">Study Status:</string>
    <string name="study_end_date">Study End Date:</string>
    <string name="notification_study">Thank you for participating in the study. The usage data generated has now been uploaded. The application will continue to function and provide advice to you.
        If you have any questions about the application please email KempCP@Cardiff.ac.uk</string>
    <string name="create">Create</string>
    <string name="display">Display</string>
    <string name="delete">Delete</string>
    <string name="delete_ambient_temp">Delete All Ambient Temp</string>
    <string name="delete_screentime">Delete All Screentime</string>
    <string name="delete_location">Delete All Location</string>
    <string name="delete_advice">Delete Advice</string>
    <string name="display_ambient_temp">Display All Ambient Temp</string>
    <string name="display_mood">Display All Mood</string>
    <string name="display_socialness">Display All Socialness</string>
    <string name="display_location">Display All Location</string>
    <string name="display_data_type">Display All DataType</string>
    <string name="display_steps">Display All Steps</string>
    <string name="display_weather">Display All Weather</string>
    <string name="display_intelligent_agent">Display IA</string>
    <string name="display_questionaire">Display Questionnaire</string>
    <string name="display_screentime">Display Screentime</string>
    <string name="datatype_usage_data">Display DataTypeUsageData</string>
    <string name="display_advice">Display Advice</string>
    <string name="display_advice_usage_data">Display Advice Usage Data</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="isJobRunning">Is Job Running</string>
    <string name="scheduleLocationJobService">schedule LocationJobService</string>
    <string name="startLocationJobService">start LocationJobService</string>
    <string name="startWeatherJobService">start WeatherJobService</string>
    <string name="startScreentimeJobService">start startScreentimeJobService</string>
    <string name="startWeatherService">start WeatherService</string>
    <string name="getsteps">get Steps</string>
    <string name="resetsensor">Reset Steps Sensor</string>
    <string name="debug">Debug</string>
    <string name="toggle_gender">TG</string>
    <string name="get_location">Get Location</string>
    <string name="clearText">Clear Text</string>
    <string name="init_intelligent_agent">Initialise IA</string>
    <string name="intelligent_agent_not_initialised">"Intelligent Agent Not Initialised "</string>
    <string name="startAdviceJobService">Start AdviceJobService</string>
    <string name="startAdviceFollowedJobService">Start startAdviceFollowedJobService</string>
    <string name="exportStudyData">Export Study Data</string>
    <string name="uploadFile">Upload File</string>
    <string name="startExportJobService">exportJobService</string>
    <string name="adviceLocation">adviceLocation</string>
    <string name="testLocation">testLocation</string>
    <string-array name="answer_1">
        <item>Very Likely</item>
        <item>Likely</item>
        <item>Unlikely</item>
        <item>Very Unlikely</item>
    </string-array>
    <string-array name="answer_2">
        <item>Once Per Day</item>
        <item>Twice Per Day</item>
        <item>Four Times Per Day</item>
    </string-array>
    <string-array name="answer_3">
        <item>Male</item>
        <item>Female</item>
        <item>Neutral</item>

    </string-array>
    <string-array name="answer_4">
        <item>Text</item>
        <item>Speech</item>
        <item>Text and Speech</item>
    </string-array>
    <string-array name="answer_5">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="answer_6">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="end_answer_1">
        <item>Very Likely</item>
        <item>Likely</item>
        <item>Unlikely</item>
        <item>Very Unlikely</item>
    </string-array>
    <string-array name="end_answer_2">
        <item>Once Per Day</item>
        <item>Twice Per Day</item>
        <item>Four Times Per Day</item>
    </string-array>
    <string-array name="end_answer_3">
        <item>Male</item>
        <item>Female</item>
        <item>Neutral</item>

    </string-array>
    <string-array name="end_answer_4">
        <item>Text</item>
        <item>Speech</item>
        <item>Text and Speech</item>
    </string-array>
    <string-array name="end_answer_5">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="end_answer_6">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="end_answer_7">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="end_answer_8">
        <item>Comfortable</item>
        <item>Uncomfortable</item>
    </string-array>
    <string-array name="end_answer_9">
        <item>Comfortable</item>
        <item>Uncomfortable</item>
    </string-array>
    <string-array name="end_answer_10">
        <item>None Of It</item>
        <item>Nearly None Of It</item>
        <item>Most Of It</item>
        <item>All Of It</item>
    </string-array>
    <string-array name="end_answer_11">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="questions">
        <item>How likely are you to follow the advice given by this Intelligent Agent?</item>
        <item>How often would you like to receive advice?</item>
        <item>What gender would you prefer the Intelligent Agent to be?</item>
        <item>What method of communication would you prefer the Intelligent Agent to use?</item>
        <item>Are you likely to follow advice given by this Intelligent Agent if a reason for the advice is given?</item>
        <item>Do you trust applications that have machine learning implemented?</item>
    </string-array>
    <string-array name="end_questions">
        <item>How likely would you to continue to follow the advice given by this IntelligentAgent?</item>
        <item>How often would you have liked to receive advice from the Intelligent Agent during the study?</item>
        <item>What gender would you have preferred the Intelligent Agent to be over the course of the study period?</item>
        <item>What method of communication would you prefer the Intelligent Agent to have used during the study period?</item>
        <item>Did you trust the advice given by the Intelligent Agent?</item>
        <item>Do you trust applications that have machine learning implemented? (Machine learning refers to algorithms that improve themselves overtime through experience and data acquisition.)</item>
        <item>Did you determine that the Intelligent Agent was not using machine learning? (Machine learning refers to algorithms that improve themselves overtime through experience and data acquisition.)</item>
        <item>How do you feel about the Intelligent Agent using traditional programming techniques instead of machine learning to provide advice? (Machine learning refers to algorithms that improve themselves overtime through experience and data acquisition.)</item>
        <item>How did you feel about the device monitoring you 24/7?</item>
        <item>How much of the advice do you think you followed?</item>
        <item>Would you prefer to follow advice given by a human over advice given by the Intelligent Agent in this application?</item>
    </string-array>
    <string-array name="placeholder_questions">
        <item>Error</item>
    </string-array>
    <string-array name="placeholder_answers_1">
        <item>Error</item>
        <item>Error</item>
    </string-array>
    <string name="current_advice">Current Advice</string>
    <string name="past_advice">Past Advice</string>
    <string name="graph">Graph</string>
    <string name="passcode">Passcode</string>
    <string name="enter_passcode">Enter Passcode</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_name_optional">Enter Name (optional)</string>
    <string name="name_optional">Name (optional)</string>
    <string name="enter_age">Enter Age</string>
    <string name="enter_age_optional">Enter Age (optional)</string>
    <string name="age_optional">Age (optional)</string>
    <string name="enter_gender">Enter Gender</string>
    <string name="enter_gender_optional">Enter Gender (optional)</string>
    <string name="gender_optional">Gender (optional)</string>
    <string name="gender_specify">Please Specify (optional)</string>
    <string name="update_user_information">Update User Information</string>
    <string name="delete_user_information">Delete User Information</string>
    <string name="save_api_key">Save API Key</string>
    <string-array name="gender">
        <item>Enter Gender (optional)</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="enter_dob">Enter Date Of Birth</string>
    <string name="enter_dob_optional">Enter Date Of Birth (optional)</string>
    <string name="submit">Submit</string>
    <string name="save_ranking_pereference">Save Ranking Preference</string>
    <string name="questionnaire">Questionaire</string>
    <string name="answer">Answer</string>
    <string name="steps">Steps</string>
    <string name="distance_traveled">Distance Traveled</string>
    <string name="location">Location</string>
    <string name="external_temp">External Temperature</string>
    <string name="screentime">Screentime</string>
    <string name="sleep_tracking">Sleep Tracking</string>
    <string name="weather">Weather</string>
    <string name="ambient_temp">Ambient Temperature</string>
    <string name="sun">Sun</string>
    <string name="socialness">Socialness</string>
    <string name="mood">Mood</string>
    <string name="no_advice">No Advice currently stored</string>
    <string name="no_advice_for_today">No advice available for today</string>
    <string name="date_advice_for">Date Advice is for: &#160;</string>
    <string name="no_Advice_Currently">No Advice has been given yet.</string>
    <string name="no_data_types_selected">No Advice Data Types have been selected.</string>
    <string name="no_data_types_selected_goto_data_activity">No Advice Data Types have been selected.\nPlease go to Data Used to activate Advice Data Types.</string>
    <string name="main_menu">Main Menu</string>
    <string name="advice">Advice</string>
    <string name="data">Data Used</string>
    <string name="justification">Justification</string>
    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>
    <string name="location_settings_inadequate_warning">The location settings on the device are not
        adequate to run this sample. Fix in Settings.</string>
</resources>