<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_main_menu"
            android:icon="@drawable/ic_main_menu"
            android:title="@string/main_menu" />

        <item
            android:id="@+id/nav_advice"
            android:icon="@drawable/ic_advice"
            android:title="@string/advice" />


        <item
            android:id="@+id/nav_justification"
            android:icon="@drawable/ic_justification"
            android:title="@string/justification" />

        <item
            android:id="@+id/nav_data"
            android:icon="@drawable/ic_data"
            android:title="@string/data" />

        <item
            android:id="@+id/nav_debug"
            android:icon="@drawable/ic_debug"
            android:title="@string/debug" />
    </group>


</menu>