<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PasscodeActivity">

    <Button
        android:id="@+id/buttonEnterPasscode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="132dp"
        android:onClick="enterPasscode"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutGender" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPasscode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_passcode"
            android:maxLength="10"
            android:maxLines="1"
            android:singleLine="true"
            android:text="MLNJXYHHSP" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassCode"
        tools:layout_editor_absoluteX="56dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name_optional"
            android:maxLength="50" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutName"
        tools:layout_editor_absoluteX="96dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_age_optional"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinnerGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutAge"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerGender">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputGenderOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_gender_optional"
            android:visibility="invisible" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>